--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -62,6 +62,13 @@ h5 {
     margin-right: 20px !important;
 }
 
+.logo {
+  position: fixed;
+  top: 0;
+  left: 3px;
+  z-index: 1030;
+}
+
 legend {
     font-family: 'Andika';
 }
